[imcomplet]qrcode screen

--- a/app.json
+++ b/app.json
@@ -34,7 +34,8 @@
           "iosUrlScheme": "com.googleusercontent.apps.582095097887-mfhhm812r98v4b53qqr3invlnj4cqgu6"
         }
       ],
-      "expo-sqlite"
+      "expo-sqlite",
+      "react-native-svg"
     ],
     "extra": {
       "eas": {
