--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "expo": "~53.0.17",
     "expo-dev-client": "~5.2.4",
     "expo-linear-gradient": "^14.1.5",
+    "expo-sqlite": "~15.2.14",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.5",
-    "expo-sqlite": "~15.2.14"
+    "react-native-fs": "^2.20.0",
+    "react-native-qrcode-svg": "^6.3.15",
+    "react-native-svg": "^15.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
