--- a/package.json
+++ b/package.json
@@ -19,11 +19,16 @@
     "react-native": "0.79.5",
     "react-native-fs": "^2.20.0",
     "react-native-qrcode-svg": "^6.3.15",
-    "react-native-svg": "^15.12.0"
+    "react-native-svg": "15.11.2",
+    "expo-sharing": "~13.1.5",
+    "react-native-view-shot": "4.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@expo/cli": "^0.21.0",
     "@types/react": "~19.0.10",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "tsx": "^4.20.3",
     "typescript": "~5.8.3"
   },
   "private": true
