stable version instagram, Points, Rounded qrcodes

--- a/app.json
+++ b/app.json
@@ -14,7 +14,10 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.lui-zwellington.qr-facil"
+      "bundleIdentifier": "com.lui-zwellington.qr-facil",
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false
+      }
     },
     "android": {
       "adaptiveIcon": {
