--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "expo": "~53.0.17",
     "expo-dev-client": "~5.2.4",
     "expo-linear-gradient": "^14.1.5",
+    "expo-sharing": "~13.1.5",
     "expo-sqlite": "~15.2.14",
     "expo-status-bar": "~2.2.3",
+    "qrcode-generator": "^2.0.2",
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-fs": "^2.20.0",
     "react-native-qrcode-svg": "^6.3.15",
     "react-native-svg": "15.11.2",
-    "expo-sharing": "~13.1.5",
     "react-native-view-shot": "4.0.3"
   },
   "devDependencies": {
