--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   },
   "dependencies": {
     "@react-native-google-signin/google-signin": "^15.0.0",
-    "expo": "~53.0.17",
+    "@react-navigation/bottom-tabs": "^7.4.2",
+    "@react-navigation/native": "^7.1.14",
+    "@react-navigation/stack": "^7.4.2",
+    "expo": "53.0.20",
     "expo-dev-client": "~5.2.4",
+    "expo-image-picker": "^16.1.4",
     "expo-linear-gradient": "^14.1.5",
     "expo-sharing": "~13.1.5",
     "expo-sqlite": "~15.2.14",
@@ -20,6 +24,7 @@
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "^2.27.1",
     "react-native-qrcode-svg": "^6.3.15",
     "react-native-svg": "15.11.2",
     "react-native-view-shot": "4.0.3"
