--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@react-native-google-signin/google-signin": "^15.0.0",
     "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/native": "^7.1.14",
-    "@react-navigation/stack": "^7.4.2",
     "expo": "53.0.20",
     "expo-dev-client": "~5.2.4",
     "expo-image-picker": "^16.1.4",
@@ -24,8 +23,8 @@
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-fs": "^2.20.0",
-    "react-native-gesture-handler": "^2.27.1",
     "react-native-qrcode-svg": "^6.3.15",
+    "react-native-safe-area-context": "5.4.0",
     "react-native-svg": "15.11.2",
     "react-native-view-shot": "4.0.3"
   },
