--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-fs": "^2.20.0",
     "react-native-qrcode-svg": "^6.3.15",
     "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
     "react-native-view-shot": "4.0.3"
   },
