--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
-    "react-native-view-shot": "4.0.3"
+    "react-native-view-shot": "4.0.3",
+    "react-native-vision-camera": "^4.7.1",
+    "expo-contacts": "~14.2.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
