--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "qr_facil",
+    "name": "Qr Fácil",
     "slug": "qr_facil",
     "version": "1.0.0",
     "orientation": "portrait",
