--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-google-signin/google-signin": "^15.0.0",
     "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/native": "^7.1.14",
+    "@react-navigation/stack": "^7.4.2",
     "expo": "53.0.20",
+    "expo-contacts": "~14.2.5",
     "expo-dev-client": "~5.2.4",
     "expo-image-picker": "^16.1.4",
     "expo-linear-gradient": "^14.1.5",
+    "expo-localization": "^16.1.6",
     "expo-sharing": "~13.1.5",
     "expo-sqlite": "~15.2.14",
     "expo-status-bar": "~2.2.3",
@@ -24,12 +28,11 @@
     "react-native": "0.79.5",
     "react-native-fs": "^2.20.0",
     "react-native-qrcode-svg": "^6.3.15",
-    "react-native-safe-area-context": "5.4.0",
+    "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
     "react-native-view-shot": "4.0.3",
-    "react-native-vision-camera": "^4.7.1",
-    "expo-contacts": "~14.2.5"
+    "react-native-vision-camera": "^4.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
