--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^1.0.1",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/netinfo": "11.4.1",
     "@react-native-google-signin/google-signin": "^15.0.0",
     "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/native": "^7.1.14",
@@ -18,6 +20,7 @@
     "expo-contacts": "~14.2.5",
     "expo-dev-client": "~5.2.4",
     "expo-image-picker": "^16.1.4",
+    "expo-in-app-purchases": "^14.5.0",
     "expo-linear-gradient": "^14.1.5",
     "expo-localization": "^16.1.6",
     "expo-sharing": "~13.1.5",
@@ -26,6 +29,7 @@
     "qrcode-generator": "^2.0.2",
     "react": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-dotenv": "^3.4.11",
     "react-native-fs": "^2.20.0",
     "react-native-qrcode-svg": "^6.3.15",
     "react-native-safe-area-context": "^5.4.0",
